Preview Application: Fixed overflow

--- a/apps/Preview/main.css
+++ b/apps/Preview/main.css
@@ -1,6 +1,15 @@
 .Window_ApplicationPreviewWindow .WindowWrapper {
+  overflow : none;
+}
+.Window_ApplicationPreviewWindow .WindowWrapper .Frame {
+  position : absolute;
+  top : 30px;
+  left : 5px;
+  right : 5px;
+  bottom : 5px;
   overflow : auto;
 }
+
 .Window_ApplicationPreviewWindow .WindowWrapper audio,
 .Window_ApplicationPreviewWindow .WindowWrapper video {
   position : absolute;
